force-app/main/default/objects/One_Degree_Attribute_Setting__mdt/One_Degree_Attribute_Setting__mdt.object-meta.xml
<CustomObject>
    <description>DO NOT USE</description>
    <label>One Degree Attribute Setting</label>
    <pluralLabel>One Degree Attribute Settings</pluralLabel>
</CustomObject>