force-app/main/default/objects/One_Degree_Attribute_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Search attribute query text.</description>
    <inlineHelpText>Search attribute query text.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>