force-app/main/default/objects/One_Degree_Attribute_Setting__mdt/fields/Attribute_Tag__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Tag__c</fullName>
    <description>DO NOT USE</description>
    <inlineHelpText>DO NOT USE</inlineHelpText>
    <label>Attribute Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>