force-app/main/default/objects/One_Degree_Attribute_Setting__mdt/fields/Last_Run_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Datetime__c</fullName>
    <label>Last Run Datetime</label>
    <type>DateTime</type>
</CustomField>